--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@adonisjs/shield": "^1.0.8"
   },
   "devDependencies": {
+    "bulma": "^0.9.3",
     "laravel-mix": "^6.0.28"
   },
   "autoload": {
